# dynamic-sinks-vector

./: Dockerfile  README.md  pyproject.toml
dynamic-sinks-vector/: main.py
